# ChangeLog for genkernel
# Copyright: 
# - 2003-2008 Gentoo Foundation
# - 2008-2011 Various authors (see AUTHORS)
# Distributed under the GPL v2
# $Id$

  03 Oct 2012; Dustin Frisch <dustin.frisch@gmail.com> defaults/linuxrc:
  With boot parameter real_init=/foo look for ${NEW_ROOT}/foo, not
  ${NEW_ROOT}/sbin/init (bug #437080)

  23 Sep 2012; Sebastian Pipping <sping@gentoo.org> gen_initramfs.sh:
  Append e2fsck and mke2fs to initramfs. Original patch by Rick Farina

  10 Sep 2012; Sebastian Pipping <sping@gentoo.org> genkernel:
  Bump version to 3.4.42

  10 Sep 2012; Sebastian Pipping <sping@gentoo.org>
  +patches/busybox/1.20.2/busybox-1.20.2-glibc-sys-resource.patch:
  Add busybox 1.20.2 patch: busybox-1.20.2-glibc-sys-resource.patch

  10 Sep 2012; Sebastian Pipping <sping@gentoo.org>
  +patches/busybox/1.20.2/1.18.1-openvt.diff,
  +patches/busybox/1.20.2/busybox-1.7.4-signal-hack.patch,
  +patches/busybox/1.20.2/busybox-1.20.1-mdstart.patch:
  Copy busybox patches from 1.20.1 to 1.20.2

  30 Aug 2012; Fabio Erculiani <lxnay@gentoo.org> defaults/linuxrc:
  mount /mnt/cdrom inside target chroot even when aufs/unionfs is disabled

  14 Aug 2012; Richard Yao <ryao@gentoo.org> genkernel:
  Bump version to 3.4.41

  12 Aug 2012; Sebastian Pipping <sping@gentoo.org> +defaults/software.sh,
  genkernel.conf:
  Move software version defaults for defaults/software.sh to ease the
  etc-update game

  12 Aug 2012; Sebastian Pipping <sping@gentoo.org> genkernel:
  Fix parsing of --config=... command line option

  27 Jul 2012; Sebastian Pipping <sping@gentoo.org> defaults/initrd.scripts,
  genkernel:
  Bump version to 3.4.40

  24 Jul 2012; Robin H. Johnson <robbat2@gentoo.org> defaults/initrd.scripts:
  Flip awk return values.

  24 Jul 2012; Robin H. Johnson <robbat2@gentoo.org> defaults/initrd.scripts:
  Minor thinko in devpts check.

  24 Jul 2012; Robin H. Johnson <robbat2@gentoo.org> defaults/initrd.scripts: