@@ -5,6 +5,10 @@
 # Distributed under the GPL v2
 # $Id$
 
+  03 Oct 2012; Sebastian Pipping <sping@gentoo.org> gen_initramfs.sh:
+  Use actual kernel config for check of available compression methods (bug
+  #436820)
+
   03 Oct 2012; Dustin Frisch <dustin.frisch@gmail.com> defaults/linuxrc:
   With boot parameter real_init=/foo look for ${NEW_ROOT}/foo, not
   ${NEW_ROOT}/sbin/init (bug #437080)
